# teamspeak_auth

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
src/teamspeak_auth/: __init__.py  __main__.py  api.py  auth_service.py  config.py  ts_client.py
src/teamspeak_auth/api/: __init__.py  auth.py  dependencies.py  models.py  ome.py  root.py  status.py
tests/: __init__.py  test_api.py  test_auth_service.py  test_config.py
